--- a/kapotopia/android/assets/strings/strings.properties
+++ b/kapotopia/android/assets/strings/strings.properties
@@ -4,6 +4,8 @@ text_world3=World 3
 text_world4=World 4
 game1_button=Infectious Jungle
 game2_button=Basket Beach
+game3_button=God'iva Show
+game4_button=Sssneaky
 text_istdex=ISTdex
 # Choosing Difficulty Screen
 easy_button=Easy
@@ -17,11 +19,16 @@ play_button=Play
 back_button=Back
 back_menu_button=Back to menu
 next_button=Next
+previous_button=Previous
 quit_button_text=Quit
 skip_button=Skip
 continue_button=Continue
 restart_button=Restart
+cancel_button=Cancel
+exit_button=Exit
+legend_button=Legend
 
+congrats_msg=Congratulations !
 success=Bravo !
 fail=GAME OVER
 pause_label_text=Pause
@@ -36,7 +43,7 @@ question_button=Question
 score2_label=Score : 
 timer_label=Timer : 
 lives_label=Lifes : 
-istattrapees=STIs catched: 
+istattrapees=STI catched: 
 highscore=Highscore: 
 time_left=Time left : 
 your_score_is=Your score is : 
@@ -46,16 +53,16 @@ dialogIntro1=Welcome to Kapotopia !
 dialogIntro2=Here, you'll learn important informations on sexuality and its risks in order to better protect yourself.
 dialogIntro3=The first world contains two tests about your knowledge on STI : their names and symptoms.\nThe second world will teach you the safe and unsafe sexual practices.\nAnd finally the STI-dex, it is simply an encyclopedia to learn everything about our ennemies, the STIs.
 # Intro Game 1
-dialogG1_1=Hi ! I was waiting for you ! I'm mireille, your condom-pal.
+dialogG1_1=Hi ! I was waiting for you ! I'm Mireille, your condom-pal.
 dialogG1_2=If you're here, it's because like me, you have to redo your exams.\nThis year, the tests are done in pairs. I'm counting on you to help me succeed !
 dialogG1_3=As you're new here, i hope the trials won't be to hard for you. The instructors tend to be a bit blunt...
 dialogG1_4=Oh speak of the devil, watch out, Sergeant Dildo's coming, we'd better shut up before we get put into the hole.
-dialogG1_5=Greetings, recruits. Welcome to the Infectious Jungle of Chilly Beachy! Here, you will show me your skills to identify our longtime enemies: the terrible STIs!
-dialogG1_6=Let's not beat around the bush, let's go for a warm-up: a little jog in the infectious jungle.\nBeware of the ists wandering around in the jungle, don't let any escape!
+dialogG1_5=Greetings, recruits. Welcome to the Infectious Jungle of Chilly Beachy! Here, you will show me your skills to identify our longtime enemies: the terrible STI!
+dialogG1_6=Let's not beat around the bush, let's go for a warm-up: a little jog in the infectious jungle.\nBeware of the STI wandering around in the jungle, don't let any escape!
 dialogG1_7=Okay bidet bottom scrapers, show me what you got!
-dialogG1_rules_1=Your goal here is to quickly identify real STIs and catch them before they hit the ground.\nMove Mireille around on the different roads in order to do that. You'll be rewarded for every STD you catch.\nWarning: not all creatures falling from trees are STIs! You're not empowered to catch them, so you'll lose a life if you do.\nAfter three lives lost, you start the adventure all over again.\n\nAnd if you find the warm-up too easy, you can always try the higher difficulty.
+dialogG1_rules_1=Your goal here is to quickly identify real STI and catch them before they hit the ground.\nMove Mireille around on the different roads in order to do that. You'll be rewarded for every STI you catch.\nWarning: not all creatures falling from trees are STI! You're not empowered to catch them, so you'll lose a life if you do.\nAfter three lives lost, you start the adventure all over again.\n\nAnd if you find the warm-up too easy, you can always try the higher difficulty.
 # Game 1
-intro_text=Well done! Unfortunately, you forgot to catch the following STIs:
+intro_text=Well done! Unfortunately, you forgot to catch the following STI:
 game1_outro1=Well, it wasn't easy, but I passed the first test thanks to you. Let's go to the next one, to the beach this time!
 # Intro Game 2
 game2_diag1=Warm sand, sunny sky, seagulls flying around, man-eating sharks, no doubt we are at the beach!
@@ -71,17 +78,23 @@ game2_badending5=Nice try!
 game2_badending6=Persevere! You can do it.
 game2_goodending1=Congratulations!
 game2_goodending2=You've combined all the good ones
-game2_goodending3=symptoms to the right STIs!
+game2_goodending3=symptoms to the right STI!
 
-game3_diag1=How dense this forest is, it's a real maze.
+game3_diag1=I'm tired after all this sport, I won't say no to some drinks.
 game3_diag2=Oh, but is that a building I see over there?
 game3_diag3=This is my final test? What a strange place, I hope I didn't get lost, let's go in and check it out.
 game3_diag4=But, but... this place is infested with STIs! I got the wrong address!
-game3_diag5=Hello, I'm Thomas GODIVA. Are you a condom?\nSTIs are my friends and we don't like your kind around here.\nYou'd better get out of here fast, we have pins to settle your score!
+game3_diag5=Hello, I'm Thomas GODIVA. Are you a condom?\nSTI are my friends and we don't like your kind around here.\nYou'd better get out of here fast, we have pins to settle your score!
 game3_instr=Hurry, you must run, or you'll get pierced!\nThis door is electronically locked. To unlock it, rotate each cell of the maze to connect the battery to the right lock!\nEach lock is associated with a risky practice, or not, tap on it to display it.\n\nWarning: Only one lock works. You must find the non-hazardous practice, the others won't work!
 game3_win=Congratulations, you managed to escape! You've passed the last test! Yes, this was all staged, and Thomas Godiva was an assistant. The house apologizes for the scare.
 game3_win_tom=Bravo! Here, take a chocolate to comfort you, hoping it will help you for the next challenge.
 game3_loose=Unfortunately you didn't manage to get away...
+
+game4_diag1=Finally, I was able to leave this weird place, but where am I? ... It looks like I'm at the back of the building ...
+game4_diag2=But what's going on here? There are lots of STIs that keep spreading !
+game4_diag3=This is the territory of my STI friends! Everything that happens here helps them to propagate. See with your own eyes how it happens!
+game4_rules=In this game you play as an STI. You have to recognize the risky practices that help you to spread.\nSelect the STI you are interested in, move with the arrows, collect the risky practices that help its transmission and avoid the protections as well as the practices that prevent the chosen STI from spreading.\n\nYou will be rewarded or penalized according to the practices you collect.
+game4_choose=Choose your STI !
 
 rules_title=RULES
 
@@ -98,14 +111,15 @@ q1_question=Mireille color ?
 
 # PRACTICES
 safe1=Getting a tattoo
-safe2=Giving massages
+safe2=Lonely masturbation
 safe3=Getting bitten\nby a mosquito
 safe4=Kissing someone
-safe5=Play kapotopia
+safe5=Play Kapotopia
 safe6=Sitting on a\npublic toilet board
 safe7=Drinking out of a stranger's glass
 safe8=Getting vaccinated
 safe9=Receiving\na blood transfusion
+safe10=Spanish handjob
 
 unsafe1=A vaginal\npenetration
 unsafe2=An anal\npenetration
@@ -120,6 +134,8 @@ unsafe10=A facial\nejaculation
 unsafe11=A finger\nin the vagina
 unsafe12=An ejaculation\non the genitals
 unsafe13=The 69 position
+unsafe14=Withdraw before ejaculation
+mistake_msg=But, you've made some mistakes:
 
 # SYMPTOMS
 hiv_symp=Often asymptomatic. In other cases, skin rashes and/or flu-like symptoms (fever, fatigue, swollen glands, etc.) in the first few weeks.
@@ -163,20 +179,20 @@ conjonctivite_name=Conjunctivitis
 mycose_name=Mycosis
 
 # STI DESCRIPTIONS
-gonorrhee_descr=Bacteria usually without symptoms. When present, there is discharge (penis or vagina), irritation and burning when urinating. It leads to sterility.
-chlamydia_descr=Most often a bacteria without symptoms, it can be recognized by pain when urinating and irregular bleeding. It leads to serious infections and sterility.
-herpes_descr=Virus causing pimples and very painful lesions during primary infection. It causes more or less frequent and important recurrences.
-vih_descr=Virus most often without symptoms, sometimes with flu-like symptoms in the first few weeks. It causes multiple infections related to a drop in immunity.
-papillomavirus_descr=Virus most often without symptoms, sometimes with precancerous lesions. It can cause genital warts and lesions that can develop into cancer.
-syphilis_descr=Bacteria that can cause joint, cardiovascular and neurological complications. It is recognized from mouth, genital or anal cankers and skin rashes.
-trichonomas_descr=Parasite causing odorous and colourful vaginal discharge. Symptom-free in 20% of cases at the vaginal level, 90% at the penis level. Greatly facilitates the appearance of other STIs.
-hepatiteA_descr=Most often a virus without symptoms, it is naturally cured in the vast majority of cases. The others evolve into fulminant hepatitis (40% mortality).
-hepatiteB_descr=Most often a virus with no symptoms, it can cause acute illness. In chronic cases, it causes liver disease, cirrhosis, cancer and death.
-hepatiteC_descr=Most often a virus without symptoms, it is naturally curable in some cases, in chronic cases there is liver disease, cirrhosis, cancer and death.
-chancremou_descr=A disease caused by Ducrey's bacile bacterium, it causes an ulcerated canker and swollen lymph nodes.
-mycoplasmagenitalium_descr=An unusual bacterium in Belgium, it causes the appearance of other infectious diseases, in particular for the reproductive organs.
-gale_descr=A skin disease caused by a parasite, it burrows into cavities below the surface of the skin, where it feeds and lays its eggs. Although not very serious, it is nonetheless highly contagious.
-morpion_descr=A parasitic insect that specifically targets pubic hair. It causes strong discomfort and its bites promote infection from other STIs.
+gonorrhee_descr=Bacteria usually without symptoms. When present, there is discharge (penis or vagina), irritation and burning when urinating. It leads to sterility. You can protect yourself with an external or internal condom or a latex pad if you have oral sex. It is advisable to be screened regularly. It consists of a vaginal, anal or throat smear and/or a urine sample.
+chlamydia_descr=Most often a bacteria without symptoms, it can be recognized by pain when urinating and irregular bleeding. It leads to serious infections and sterility. You can protect yourself with an external or internal condom or a latex pad if you have oral sex. It is advisable to be screened regularly. It consists of a vaginal, anal or throat smear and/or a urine sample.
+herpes_descr=Virus causing pimples and very painful lesions during primary infection. It causes more or less frequent and important recurrences. Condoms and latex squares can provide partial protection, but the lesions should not be touched. Testing requires a medical examination. It is worn for life once infected.
+vih_descr=Virus most often without symptoms, sometimes with flu-like symptoms in the first few weeks. It causes multiple infections related to a drop in immunity. You can protect yourself with an external or internal condom or a latex pad, and you must avoid contact between contaminating liquids, open wounds, or mucous membranes. Screening is done through a blood test.
+papillomavirus_descr=Virus most often without symptoms, sometimes with precancerous lesions. It can cause genital warts and lesions that can develop into cancer. Vaccination is recommended for all women, a condom and a latex pad can reduce the risk but are not sufficient. Screening is done by a medical examination or a smear test. An examination every 3 years is recommended.
+syphilis_descr=Bacteria that can cause joint, cardiovascular and neurological complications. It is recognized from mouth, genital or anal cankers and skin rashes. If the chancre is on the genitals, you can protect yourself with a condom. Testing is done with a blood test and a clinical examination.
+trichonomas_descr=Parasite causing odorous and colourful vaginal discharge. Symptom-free in 20% of cases at the vaginal level, 90% at the penis level. Greatly facilitates the appearance of other STIs. You can protect yourself with an external or internal condom. Screening is done through a vaginal or urethral smear. Treatment is based on antibiotics.
+hepatiteA_descr=Most often a virus without symptoms, it is naturally cured in the vast majority of cases. The others evolve into fulminant hepatitis (40% mortality). A vaccine is available. Contact of the mouth with faeces should be avoided. Therefore, use a latex square in case of anilingus. Screening is done through a blood test.
+hepatiteB_descr=Most often a virus with no symptoms, it can cause acute illness. In chronic cases, it causes liver disease, cirrhosis, cancer and death. A vaccine is available. Contact with feces should be avoided, so use a condom or a latex condom if you have oral sex. Screening is done through a blood test. There is an oral treatment.
+hepatiteC_descr=Most often a virus without symptoms, it is naturally curable in some cases, in chronic cases there is liver disease, cirrhosis, cancer and death. It is protected by an external or internal condom or a latex patch. Screening via blood test and TROD. An antiviral treatment is available.
+chancremou_descr=A disease caused by Ducrey's bacile bacterium, it causes an ulcerated canker and swollen lymph nodes. Condoms reduce the risk of transmission. Screening should include a clinical examination.
+mycoplasmagenitalium_descr=An unusual bacterium in Belgium, it causes the appearance of other infectious diseases, in particular for the reproductive organs. You can protect yourself by using condoms. Screening is done through a vaginal, anal and throat swab or a urine test.
+gale_descr=A skin disease caused by a parasite, it burrows into cavities below the surface of the skin, where it feeds and lays its eggs. Although not very serious, it is nonetheless highly contagious. Avoiding prolonged contact with an infected person or his or her clothing is necessary to protect yourself. Scabies is detected during a medical examination.
+morpion_descr=A parasitic insect that specifically targets pubic hair. It causes strong discomfort and its bites promote infection from other STIs. Shaving the pubic hair prevents the development of crabs. Their presence is determined by medical examination or self-examination.
 alternariose_descr=A series of fungal diseases that cause burns to certain types of plants, such as sunflowers, tomatoes and carrots. It can be considered a plant-related STI.
 #TODO change the name of this fake ist to make a joke with the english surname of Gonorrhea (which is the clap)
 froidepisse_descr=The clap is synonymous with gonorrhea, however this one is an imaginary disease.
